# presentation

./: README.md
demo1/filesystem/go/: README.md
demo1/filesystem/go/filesystem/: go.mod  main.go
demo1/filesystem/rust/: README.md
demo1/filesystem/rust/filesystem/src/: main.rs
demo1/hello-world/go/: README.md
demo1/hello-world/rust/: README.md
demo2/component/: README.md
demo2/component/host/: Cargo.toml
demo2/component/host/plugins/: uppercase.wasm
demo2/component/host/src/: main.rs
demo2/component/host/wit/: world.wit
demo2/component/plugins/js/: README.md  package-lock.json  package.json  reverse.js
demo2/component/plugins/python/: README.md  obfuscate.py
demo2/component/plugins/python/plugin_guest/plugin/: __init__.py
demo2/component/plugins/python/wit/: world.wit
demo2/component/plugins/rust/: Cargo.toml  README.md
demo2/component/plugins/rust/src/: bindings.rs  lib.rs
demo2/component/plugins/rust/wit/: world.wit
demo2/composing/: README.md
demo2/composing/cities/: Cargo.toml
demo2/composing/cities/src/: bindings.rs  lib.rs
demo2/composing/cities/wit/: world.wit
demo2/composing/hello/: Cargo.toml
demo2/composing/hello/src/: bindings.rs  main.rs
demo2/composing/hello/wit/: world.wit
demo2/module/add/: README.md
demo2/module/uppercase/: README.md
demo2/module/uppercase/uppercase/: Cargo.toml
demo2/module/uppercase/uppercase/src/: lib.rs
