[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen = "0.38.0"
wit-bindgen-rt = "0.38.0"

[package.metadata.component]
package = "component:hello"

[package.metadata.component.target]
path = "wit/world.wit"
world = "hello-city"

[package.metadata.component.target.dependencies]
"component:cities" = { path = "../cities/wit/world.wit" }
